<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/w4"
    tools:context="com.example.andraburuiana.tourguide.MainActivity">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/waw_tour"
          android:textSize="@dimen/sz1"
          android:fontFamily="casual"
          android:textColor="#FFFFFF"
          android:id="@+id/textView2"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp" />









    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="38dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:fontFamily="@string/write1"
            android:text="@string/text1"
            android:textColor="#add8e6"
            android:textSize="@dimen/size1"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
                     </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


    </RelativeLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/p4"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignLeft="@+id/relativeLayout2"
        android:layout_alignStart="@+id/relativeLayout2"
        android:layout_marginTop="45dp"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/p3"
        />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/p1"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_marginTop="38dp"
        />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/p2"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_marginBottom="8dp"
        />
</RelativeLayout>